---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: ????
  Features:
    - Added an option to show the active (topmost in progress) task at the top of the screen
  Changes:
    - Increased GUI spacing to improve visiblity
    - Made add subtask button easier to click
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2022-02-03
  Features:
    - Added a setting to disable `E` to create new task
  Changes:
    - Opening the new task window with `E` is disabled by default
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2022-01-27
  Features:
    - Pressing `E` with the tasks GUI open will open the new task window (#10)
  Compatibility:
    - [Editor Extensions] The testing lab force will be ignored in favor of the player's "actual" force
  Bugfixes:
    - Fixed a crash when another mod deletes the tasks GUI (#9)
    - Fixed that rejected confirm with E was still closing the edit task GUI
    - Fixed the mod not accounting for forces created after the start of a game
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2021-12-04
  Bugfixes:
    - Fixed the edit task GUI not closing if you click the confirm button
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2021-12-01
  Bugfixes:
    - Fixed that the tasks GUI would close if you used E to confirm the edit task GUI
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2021-11-27
  Changes:
    - Updated Russian locale (#4) (credit to Astorin)
  Bugfixes:
    - Fixed player tasks being left behind if a player was removed
    - Fixed the edit description textbox not wrapping (#5)