@@ -7,6 +7,7 @@ tlst-show-active-task=The active task is the topmost "in progress" task on your 
 
 [mod-setting-name]
 tlst-new-task-on-confirm=Open new task window on confirm
+tlst-new-tasks-in-progress=Mark new tasks as in progress
 tlst-show-active-task=Show active task [img=info]
 
 [gui]
