@@ -2,9 +2,10 @@
 Version: 0.4.0
 Date: ????
   Features:
+    - Added an option to automatically mark new tasks as in progress
     - Added an option to show the active (topmost in progress) task at the top of the screen
   Changes:
-    - Increased GUI spacing to improve visiblity
+    - Increased GUI spacing to improve readability
     - Made add subtask button easier to click
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.1
